--- a/taxiBookingApi/Properties/launchSettings.json
+++ b/taxiBookingApi/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/bookings",
+      "launchUrl": "index.html",
       "applicationUrl": "https://localhost:7071;http://localhost:5015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
